ジャンル別検索ページから正しい値がPOST送信されるように変更しました。 ジャンル別検索ページのcssを調整しました。 新規会員登録時に管理者、aglandscapes.admin@gmail.comでは登録できないように変更しました。

--- a/aglandscapes/assets/css/yuri_main.css
+++ b/aglandscapes/assets/css/yuri_main.css
@@ -247,7 +247,7 @@ label.panel-label:hover {
 
 #panels {
   background-color: white;
-  height: 700px;
+  height: 100%;
 }
 #panels .container {
   margin: 0 auto;
