応募記事の削除ボタン・応募完了表示、popupのCSS修正

--- a/aglandscapes/assets/css/anly_ag_original.css
+++ b/aglandscapes/assets/css/anly_ag_original.css
@@ -21,11 +21,6 @@
     border-top: 1px solid #eee;
 }
 
-.align-center {
-  display: inline-block;
-  text-align: left;
-}
-
 /* ContentsArea
 -------------------------- */
 #contents {
@@ -84,7 +79,7 @@ p {
     font-weight: bold;
     text-align: left;
     text-indent: 15px;
-    background: #000;
+    /*background: #000;*/
 }
  
 .modal_window p {
